fixed bottom gap between search box and rest of admin menus

--- a/asset/style-admin.css
+++ b/asset/style-admin.css
@@ -58,7 +58,6 @@ body.folded .ama_adminmenu:hover #ama_search {
     display: block;
     border-radius: 5px;
     font-size: 12px;
-    margin-bottom: 10px
 }
 
 /**
